test: refactor TicketServiceTest to improve readability and utilize appropriate collection methods